--- a/INSTALL
+++ b/INSTALL
@@ -12,7 +12,7 @@
 
   [1] Installing required following packages and its dependencies:
 
-      > sudo apt-get install python-setuptools git build-essential python-dev rcs mongodb emacs24 python-virtualenv ipython libjpeg-dev memcached libevent-dev libfreetype6-dev zlib1g-dev ffmpeg2theora
+      > sudo apt-get install python-setuptools git build-essential python-dev rcs mongodb emacs24 python-virtualenv ipython libjpeg-dev memcached libevent-dev libfreetype6-dev zlib1g-dev ffmpeg2theora rabbitmq-server
 
   [2] Get latest version of gstudio-mongokit using one of the following commands:
 
@@ -183,33 +183,10 @@
   > git pull origin mongokit  # Or Simply
 
 
-<<<<<<< HEAD
-*Following are for mailclient app and Replication features
+* For 'Replication' and 'mail-client' features refer: doc/Mailclient
 
 
-*Following has to be done for using the Replication features
-9.	Create a file local_settings.py in /gstudio/gnowsys-ndf/gnowsys_ndf/
-	In this file add the following variables:
-	
-	# SMTP setting for sending mail (Using gmail SMTP server)
-	EMAIL_USE_TLS = True
-	EMAIL_HOST = ''
-	EMAIL_PORT = 587
-	EMAIL_HOST_USER = ''
-	EMAIL_HOST_PASSWORD = ''
-
-	# The following email id and password for the email account will be used for sending/receiving SYNCDATA
-	SYNCDATA_FETCHING_EMAIL_ID = ''
-	SYNCDATA_FETCHING_EMAIL_ID_PASSWORD = ''
-	SYNCDATA_FETCHING_IMAP_SERVER_ADDRESS = ''
-
-	SYNCDATA_SENDING_EMAIL_ID = ''
-
-	# This is the duration (in secs) at which send_syncdata and fetch_syncdata scripts will be run
-	SYNCDATA_DURATION = 60
-=======
 * Edit SCSS/SAAS stylesheet(s)
->>>>>>> 97c0446c897bb394732a2e5290c5dcb2f17342c1
 
   (a) Installing Ruby and compass:
 
