--- a/doc/index.org
+++ b/doc/index.org
@@ -14,8 +14,7 @@
     Gnowledge lab of Homi Bhabha Centre for Science Education, TIFR develops and 
     maintains gStudio as its flagship software development project for supporting online education.
     
-    An interoperable interfaces are being added to make GStudio work with platforms that support OSID (http://osid.org/). 
-    A python binding of DLKit (http://dlkit-doc.readthedocs.io/en/latest/) is being used in collaboration with Office of the Digital Learning at MIT. 
+    Interoperable interfaces with REST bridge are being added to make GStudio work with platforms that support OSID (http://osid.org/). A python binding of DLKit (http://dlkit-doc.readthedocs.io/en/latest/) is being used in collaboration with Office of the Digital Learning at MIT. 
 
 * Design of the Platform
 
