--- a/INSTALL
+++ b/INSTALL
@@ -12,7 +12,7 @@
 
   [1] Installing required following packages and its dependencies:
 
-      > sudo apt-get install python-setuptools git build-essential python-dev rcs mongodb python-virtualenv ipython libjpeg-dev memcached libevent-dev libfreetype6-dev zlib1g-dev ffmpeg2theora rabbitmq-server libssl-dev libffi-dev libxml2-dev libxslt1-dev yarn
+      > sudo apt-get install python-setuptools git build-essential python-dev rcs mongodb python-virtualenv ipython libjpeg-dev memcached libevent-dev libfreetype6-dev zlib1g-dev ffmpeg2theora rabbitmq-server libssl-dev libffi-dev libxml2-dev libxslt1-dev apt-transport-https
 
   [2] Get latest version of gstudio using one of the following commands:
 
@@ -69,9 +69,16 @@
 
           If above step gives an error, install NodeJS at root level with
           following commands:
-          (a) sudo add-apt-repository ppa:chris-lea/node.js
-          (b) sudo apt-get update
-          (c) sudo apt-get install python-software-properties python g++ make nodejs
+          * For stable nodejs version in ubuntu: 0.10.* 
+              (a) sudo add-apt-repository ppa:chris-lea/node.js
+              (b) sudo apt-get update
+              (c) sudo apt-get install python-software-properties python g++ make nodejs
+          * For latest nodejs version:
+              (a) apt-get install npm
+              (b) sudo npm cache clean
+              (c) sudo npm install -g n
+              (d) sudo n latest
+              (e) ln -sf /usr/local/n/versions/node/<version no from above step>/bin/node /usr/bin/node
 
       (4) Installing Bower:
           > sudo npm install -g bower
@@ -176,3 +183,8 @@
 
   - http://gnowledge.org/cgi-bin/mailman/listinfo/gnowsys-dev
 
+
+* Installing yarn:
+  (a) curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+  (b) echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  (c) sudo apt-get update && sudo apt-get install yarn
