fixed order of pymongo in requirements.txt

--- a/INSTALL
+++ b/INSTALL
@@ -78,9 +78,9 @@
                 - apt-get remove nodejs npm node
                 - sudo apt-get purge nodejs npm node
                 - sudo rm -rvf /usr/local/bin/npm /usr/local/share/man/man1/node* /usr/local/lib/dtrace/node.d ~/.npm ~/.node-gyp /opt/local/bin/node opt/local/include/node /opt/local/lib/node_modules 
-                - sudo rm -rf /usr/local/lib/node*
-                - sudo rm -rf /usr/local/include/node*
-                - sudo rm -rf /usr/local/bin/node*
+                - sudo rm -rfv /usr/local/lib/node*
+                - sudo rm -rfv /usr/local/include/node*
+                - sudo rm -rfv /usr/local/bin/node*
 
               (a) sudo apt-get install npm
               (b) sudo npm cache clean  OR  sudo npm cache vefify
